# awesome

./: .gitignore  README.md  Trust.fst  arch.md  arch.typ  arch2.typ  arch_ui.typ  audit_railgun.md  depot_kinetics.ipynb  eigen.ipynb  eigen_jax.ipynb  gen_typos.ts  philosophy.md  philosophy2.md  prob.pl  pyproject.toml  release_all.sh  zk_survey.md
src/plein_awesome/: __init__.py
