[project]
name = "plein-awesome"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "plein", email = "68096727+planetoryd@users.noreply.github.com" }
]
dependencies = [
    "jax>=0.6.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plein_awesome"]
